fix address size to match rest of content and remove external link icon on mobile

--- a/frontend/src/styles/card.scss
+++ b/frontend/src/styles/card.scss
@@ -432,7 +432,7 @@
  }
  
  .card-address-link{
-   font-size: 1.5vh;
+   font-size: 1.8vh;
    cursor: pointer;
    text-decoration: none;
 }
